--- a/wp-content/themes/twentythirteen/style.css
+++ b/wp-content/themes/twentythirteen/style.css
@@ -70,7 +70,6 @@ Use it to make something cool, have fun, and share what you've learned with othe
 @font-face {
   font-family: 'Futura-Book';
   src: url('fonts/Futura-Book.eot?#iefix') format('embedded-opentype'),
-     url('fonts/Futura-Book.woff') format('woff'),
      url('fonts/Futura-Book.ttf') format('truetype'),
      url('fonts/Futura-Book.svg#webfont') format('svg');
 }
@@ -104,7 +103,7 @@ Use it to make something cool, have fun, and share what you've learned with othe
 @font-face {
 	font-family: 'Futura-Condensed';
 	src: url('fonts/Futura-Condensed.eot');
-	src: local('☺'), url('fonts/Futura-Condensed.woff') format('woff'), url('fonts/Futura-Condensed.ttf') format('truetype'), url('fonts/Futura-Condensed.svg') format('svg');
+	src: local('☺'), url('fonts/Futura-Condensed.ttf') format('truetype'), url('fonts/Futura-Condensed.svg') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -113,7 +112,7 @@ Use it to make something cool, have fun, and share what you've learned with othe
 @font-face {
 	font-family: 'JerseyM54';
 	src: url('fonts/JerseyM54.ttf');
-	src: local('☺'), url('fonts/JerseyM54.woff') format('woff'), url('fonts/JerseyM54.ttf') format('truetype'), url('fonts/JerseyM54.svg') format('svg');
+	src: local('☺'), url('fonts/JerseyM54.ttf') format('truetype'), url('fonts/JerseyM54.svg') format('svg');
 	/**font-weight: normal;
 	font-style: normal;**/
 }
@@ -4319,13 +4318,14 @@ i.icon-health {
 
 .slider-content .left-detail-post {
 	position: relative;
-	width: 280px;
-	height: 335px;
+	width: 300px;
+	height: 362px;
 	padding: 0px 20px;
 	background-color: red;
 	color: white;
 	float: left;
 }
+
 
 .slider-content .left-detail-post h2{
 	margin: 23px 0px 17px 0px;
@@ -4359,14 +4359,23 @@ i.icon-health {
 }
 
 .slider-content .right-image {
-	height: 335px;
 	border-bottom: 4px solid black;
 	border-top: 4px solid black;
 	border-left: 6px solid black;
 	border-right: 6px solid black;
-	margin-left:280px;
+	margin-left: 300px;
+  width: 724px !important;
+  height: 362px !important;
+  background:#CFCFCF
 }
 
+.slider-content .right-image .jAccordion-slideWrapper {
+  height: 353px !important;
+}
+
+.slider-content .right-image img.jAccordion-img {
+
+}
 
 .blog-page .the_excerpt {
 	font-family: 'Futura-Medium';
