--- a/wp-content/themes/twentythirteen/css/jAccordion/default.css
+++ b/wp-content/themes/twentythirteen/css/jAccordion/default.css
@@ -16,9 +16,11 @@
 	display: block;
 	overflow: hidden;
 	position: relative;
+  /*
 	-webkit-box-shadow: -2px 0px 5px #000;
 	-moz-box-shadow: -2px 0px 5px #000;
 	box-shadow: -2px 0px 5px #000;
+  */
 }
 /* Opera 10.xx bug fix
  * More info: http://css-lab.com/bug-test/opera-ap-bugfix.html
