--- a/wp-content/themes/twentythirteen/style.css
+++ b/wp-content/themes/twentythirteen/style.css
@@ -4575,3 +4575,58 @@ a.opacity:hover {
   opacity: 0.65;
   filter:Alpha(opacity=65); /* IE8 and earlier */
 }
+
+.opacity-hover {
+  cursor: pointer;
+  opacity: 0.65;
+  filter:Alpha(opacity=65); /* IE8 and earlier */
+}
+
+.opacity-out {
+  cursor: pointer;
+  opacity: 1;
+  filter:Alpha(opacity=100); /* IE8 and earlier */
+}
+
+
+.layer-info {
+  width:100%; height: 100%;
+}
+.layer-info .bg-gray {
+  background: #5e5e5e;
+  opacity: 0.74;
+  filter:Alpha(opacity=74); /* IE8 and earlier */
+  position: fixed;
+  top: 0px; left: 0px;
+  width:100%; height: 100%;
+  z-index: 0;
+}
+
+.info-content {
+  background: #ff009a;
+  width: 810px; height: 420px;
+  position: fixed;
+  top: 250px;
+  z-index: 1000;
+}
+
+.info-content .close-what {
+  background: url('images/close-what25x25.png') no-repeat center;
+  position: absolute;
+  top: 10px; right:10px;
+  width: 25px; height: 25px;
+  cursor: pointer;
+}
+.info-content .content-what {
+  padding: 44px;
+  padding-top: 0px;
+  color: #fff;
+}
+.info-content .what {
+  font-family: 'Conv_Futura-CondensedExtraBold';
+  font-size: 65pt;
+}
+.info-content .content {
+  font-family:"Futura-Medium",Bitter, Georgia, serif;
+  font-size: 13pt;
+}
