--- a/wp-content/themes/twentythirteen/style.css
+++ b/wp-content/themes/twentythirteen/style.css
@@ -4712,3 +4712,46 @@ a.opacity:hover {
   width: 100px; height: 50px;
 }
 
+.get-glued {
+  background: #fff000;
+  width: 634px; height: 312px;
+  position: fixed;
+  top: 250px;
+  z-index: 1000;
+}
+.get-glued .close-glued {
+  background: url('images/close-say.png') no-repeat center;
+  position: absolute;
+  top: 10px; right:10px;
+  width: 25px; height: 25px;
+  cursor: pointer;
+}
+.get-glued .content-glued {
+  padding: 44px;
+  padding-top: 0px;
+  color: #5b5b5b;
+}
+.get-glued .glued {
+  font-family: 'JerseyM54';
+  font-size: 60pt;
+}
+.get-glued .content {
+  font-family:"JerseyM54",Bitter, Georgia, serif;
+  margin-top: -20px;
+  font-size: 13pt;
+  line-height: 20px;
+}
+.get-glued .colgroup {
+  padding-top: 5px;
+  font-family:"JerseyM54",Bitter, Georgia, serif;
+  font-size: 13pt;
+}
+.get-glued input.text {
+  border: none;
+  width: 310px; height: 30px;
+}
+.get-glued input.submit {
+  border: none;
+  width: 100px; height: 40px;
+}
+
