--- a/wp-content/themes/twentythirteen/style.css
+++ b/wp-content/themes/twentythirteen/style.css
@@ -4594,7 +4594,7 @@ color:#bbbdbf;
 }
 
 .blog-page .icon-nudege {
-	background: url('images/nudge.png') no-repeat center;
+	background: url('images/nudge-x.png') no-repeat center;
 	width: 250px;
 	height: 60px;
 	margin:auto;
@@ -4702,11 +4702,13 @@ a.opacity:hover {
 }
 
 .content-say .wpcf7-textarea {
+  font-family: "Futura-Medium",Bitter, Georgia, serif;
   border: none;
   width: 737px; height: 100px;
 }
 
 .content-say input.text {
+  font-family: "Futura-Medium",Bitter, Georgia, serif;
   border: none;
   width: 310px; height: 50px;
 }
@@ -4751,6 +4753,7 @@ a.opacity:hover {
   font-size: 13pt;
 }
 .get-glued input.text {
+  font-family: "Futura-Medium",Bitter, Georgia, serif;
   border: none;
   width: 310px; height: 30px;
 }
